force-app/main/default/objects/Media_Property__c/Media_Property__c.object-meta.xml
<CustomObject>
    <label>Media Property</label>
    <nameField>
        <label>Media Properties Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>