force-app/main/default/objects/Media_Property__c/fields/BGR__c.field-meta.xml
<CustomField>
    <fullName>BGR__c</fullName>
    <label>BGR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>