force-app/main/default/objects/Media_Property__c/fields/CompressFactor__c.field-meta.xml
<CustomField>
    <fullName>CompressFactor__c</fullName>
    <label>CompressFactor</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>