force-app/main/default/objects/Media_Property__c/fields/Density__c.field-meta.xml
<CustomField>
    <fullName>Density__c</fullName>
    <label>Density</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>