force-app/main/default/objects/Media_Property__c/fields/FlashPoint__c.field-meta.xml
<CustomField>
    <fullName>FlashPoint__c</fullName>
    <label>FlashPoint</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>