force-app/main/default/objects/Media_Property__c/fields/LatentHeat__c.field-meta.xml
<CustomField>
    <fullName>LatentHeat__c</fullName>
    <label>LatentHeat</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>