force-app/main/default/objects/Media_Property__c/fields/Media__c.field-meta.xml
<CustomField>
    <fullName>Media__c</fullName>
    <label>Media</label>
    <length>50</length>
    <type>Text</type>
</CustomField>