force-app/main/default/objects/Media_Property__c/fields/Media_Phase__c.field-meta.xml
<CustomField>
    <fullName>Media_Phase__c</fullName>
    <label>Media Phase</label>
    <length>150</length>
    <type>Text</type>
</CustomField>