force-app/main/default/objects/Media_Property__c/fields/MolecularWeight__c.field-meta.xml
<CustomField>
    <fullName>MolecularWeight__c</fullName>
    <label>MolecularWeight</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>