force-app/main/default/objects/Media_Property__c/fields/RDLiquidDisp__c.field-meta.xml
<CustomField>
    <fullName>RDLiquidDisp__c</fullName>
    <label>RD Liquid Display</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>