force-app/main/default/objects/Media_Property__c/fields/SpecificHeatRatio__c.field-meta.xml
<CustomField>
    <fullName>SpecificHeatRatio__c</fullName>
    <label>SpecificHeatRatio</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>