force-app/main/default/objects/Media_Property__c/fields/SpGRelToWater__c.field-meta.xml
<CustomField>
    <fullName>SpGRelToWater__c</fullName>
    <label>SpGRelToWater</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>