force-app/main/default/objects/Media_Property__c/fields/ValveDisp__c.field-meta.xml
<CustomField>
    <fullName>ValveDisp__c</fullName>
    <label>Valve Display</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>