force-app/main/default/objects/Media_Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Media__c</columns>
    <columns>Media_Phase__c</columns>
    <columns>SpecificHeatRatio__c</columns>
    <columns>MolecularWeight__c</columns>
    <columns>CompressFactor__c</columns>
    <columns>Density__c</columns>
    <columns>ValveDisp__c</columns>
    <columns>FlameDisp__c</columns>
    <columns>BGRDisp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>